--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Page Title</title>
     <script src="scripts/jquery-1.6.4.js" type="text/javascript"></script>
     <script src="scripts/jquery.mobile-1.2.0.min.js" type="text/javascript"></script>
     <script src="scripts/cordova.js" type="text/javascript"></script>
+    <script src="scripts/PushNotification.js" type="text/javascript"></script>
     <link rel="Stylesheet" href="style/jquery.mobile-1.2.0.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-
-    <script type="text/javascript" src="PushNotification.js"></script>
     <script type="text/javascript">
         var pushNotification;
         var sessionGuid;
