--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
                            if (r.value == 0) {
                                InitPushNotification(r.message);
                            }
+                           else{
+                               alert("wrong return"+r.value);
+                           }
                        }
                    });
             }
