--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <title>PrimDial Pager</title>  
-    <script src="scripts/jquery-1.6.4.js" type="text/javascript"></script>
-    <script src="scripts/jquery.mobile-1.2.0.min.js" type="text/javascript"></script>   
-     <script src="scripts/cordova.js" type="text/javascript"></script>
     <link rel="Stylesheet" href="style/jquery.mobile-1.2.0.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="scripts/jquery-1.6.4.js" type="text/javascript"></script>
+    <script src="scripts/jquery.mobile-1.2.0.min.js" type="text/javascript"></script>   
+     <script src="scripts/cordova.js" type="text/javascript"></script>    
+    <script src="scripts/PushNotification.js" type="text/javascript"></script>
 </head>
 <body>  
      <div data-role="page" data-theme="b" id="mainPage">
@@ -84,8 +85,7 @@
             <div id="callDialog"></div>
         </div>
     </div>
-    
-    <script src="PushNotification.js" type="text/javascript"></script>
+        
     <script type="text/javascript">
         var pushNotification;
         var sessionGuid;
