--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             //    e.preventDefault();
             //    navigator.app.exitApp();
             //}, false);
-
+            alert("Device Ready");
             //get server details
             try {
                 DeviceData.messagetype = MESSAGE_SERVER_DETAILS;
